--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,5 @@
 @import "flowbite/src/themes/default"; /* Pastikan ini file CSS */
-@import 'flowbite'; /* Pastikan ini file CSS */
+@import 'flowbite/dist/flowbite.min.css'; /* Pastikan ini file CSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
